--- a/eureka-server-dev.yml
+++ b/eureka-server-dev.yml
@@ -11,4 +11,6 @@ eureka:
 
 server.port: 8002
 
-management.endpoints.web.exposure.include: "*"
+management:
+  endpoints.web.exposure.include: "*"
+  endpoint.health.show-details: always
