--- a/appointment-service-dev.yml
+++ b/appointment-service-dev.yml
@@ -30,4 +30,6 @@ eureka:
 
 server.port: 8012
 
-management.endpoints.web.exposure.include: "*"
+management:
+  endpoints.web.exposure.include: "*"
+  endpoint.health.show-details: always
