--- a/user-service-docker.yml
+++ b/user-service-docker.yml
@@ -17,4 +17,6 @@ eureka:
 
 server.port: 8010
 
-management.endpoints.web.exposure.include: "*"
+management:
+  endpoints.web.exposure.include: "*"
+  endpoint.health.show-details: always
