--- a/eureka-server-dev.yml
+++ b/eureka-server-dev.yml
@@ -1,10 +1,10 @@
 eureka:
   server:
-    waitTimeInMsWhenSyncEmpty: 5
+    wait-time-in-ms-when-sync-empty: 0
   client:
     register-with-eureka: false
     fetch-registry: false
-    serviceUrl:
+    service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   instance:
     hostname: localhost
