--- a/mail-sender-service-dev.yml
+++ b/mail-sender-service-dev.yml
@@ -20,4 +20,4 @@ spring:
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://localhost:8002/eureka/
+  client.service-url.defaultZone: http://localhost:8002/eureka/
