--- a/time-service-dev.yml
+++ b/time-service-dev.yml
@@ -18,7 +18,7 @@ keycloak:
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://localhost:8002/eureka/
+  client.service-url.defaultZone: http://localhost:8002/eureka/
 
 server.port: 8011
 
