--- a/appointment-service-dev.yml
+++ b/appointment-service-dev.yml
@@ -26,7 +26,7 @@ keycloak:
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://localhost:8002/eureka/
+  client.service-url.defaultZone: http://localhost:8002/eureka/
 
 server.port: 8012
 
