--- a/appointment-service-docker.yml
+++ b/appointment-service-docker.yml
@@ -26,7 +26,7 @@ keycloak:
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://eureka:8002/eureka/
+  client.service-url.defaultZone: http://eureka:8002/eureka/
 
 server.port: 8012
 
