--- a/mail-scheduler-service-dev.yml
+++ b/mail-scheduler-service-dev.yml
@@ -15,4 +15,4 @@ cron.send-appointment-reminder-email: 0 0 8 * * *
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://localhost:8002/eureka/
+  client.service-url.defaultZone: http://localhost:8002/eureka/
