--- a/mail-scheduler-service-docker.yml
+++ b/mail-scheduler-service-docker.yml
@@ -15,4 +15,4 @@ cron.send-appointment-reminder-email: 0 0 8 * * *
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://eureka:8002/eureka/
+  client.service-url.defaultZone: http://eureka:8002/eureka/
