--- a/mail-sender-service-docker.yml
+++ b/mail-sender-service-docker.yml
@@ -20,4 +20,4 @@ spring:
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://eureka:8002/eureka/
+  client.service-url.defaultZone: http://eureka:8002/eureka/
