--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -13,7 +13,7 @@ keycloak:
 
 eureka:
   instance.prefer-ip-address: true
-  client.serviceUrl.defaultZone: http://localhost:8002/eureka/
+  client.service-url.defaultZone: http://localhost:8002/eureka/
 
 server.port: 8010
 
