--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -1,7 +1,8 @@
-spring.security.oauth2.resourceserver.opaquetoken:
-  introspection-uri: ${keycloak.server-url}/realms/${keycloak.realm}/protocol/openid-connect/token/introspect
-  client-id: ${keycloak.client-id}
-  client-secret: ${keycloak.client-secret}
+spring:
+  security.oauth2.resourceserver.opaquetoken:
+    introspection-uri: ${keycloak.server-url}/realms/${keycloak.realm}/protocol/openid-connect/token/introspect
+    client-id: ${keycloak.client-id}
+    client-secret: ${keycloak.client-secret}
 
   kafka:
     bootstrap-servers: kafka:9092
